cmake_minimum_required(VERSION 3.28)
project(dataStructureAndAlgorithm C)

set(CMAKE_C_STANDARD 99)

add_executable(LinkdedList LinkdedList.c LinkdedList.h)
add_executable(IntStack IntStack.c IntStack.h)
add_executable(LinearIntQueue LinearIntQueue.c LinearIntQueue.h)
add_executable(RingIntQueue RingIntQueue.c RingIntQueue.h)
add_executable(IntDeque IntDeque.c IntDeque.h)
add_executable(BinTree BinTree.c BinTree.h)
add_executable(Heap Heap.c Heap.h)
add_executable(BFS BFS.c BFS.h)
add_executable(DFS DFS.c DFS.h)
add_executable(BubbleSort Bubble.c)
add_executable(SelectionSort Selection.c)
add_executable(InsertionSort Insertion.c)
add_executable(ShellSort Shell.c)
add_executable(QuickSort Quick.c)
add_executable(QuickSortNonRecursive QuickNonRecursive.c IntStack.c IntStack.h)
add_executable(MergeSort Merge.c)
add_executable(HeapSort HeapSort.c Heap.c Heap.h)
add_executable(PrimMST Prim.c Prim.h)
add_executable(KruskalMST Kruskal.c Kruskal.h)
add_executable(Dijkstra Dijkstra.c Dijkstra.h)
add_executable(Floyd Floyd.c Floyd.h)
add_executable(AVLTree AVL.c AVL.h)
add_executable(RBTree RedBlack.c RedBlack.h)
add_executable(Search Search.c)
add_executable(BinarySearch BSearch.c)
add_executable(InterpolationSearch ISearch.c)
add_executable(BinTreeSearch BTSearch.c BinTree.c BinTree.h)
